# BIL464_MySweetHome

./: .gitignore  AbstractActionHandler.cpp  AbstractActionHandler.h  AddDeviceCommand.h  AlarmAction.cpp  AlarmAction.h  CMakeLists.txt  CallFireStationAction.cpp  CallFireStationAction.h  CallPoliceAction.cpp  CallPoliceAction.h  DetectionSystem.cpp  DetectionSystem.h  FlashLightAction.cpp  FlashLightAction.h  IObserver.h  ISubject.h  LightOnAction.cpp  LightOnAction.h  Makefile  Makefile-Murat  README.md  SecuritySystem.cpp  SecuritySystem.h  main.cpp
Murat-Devices/: Device.h  LGTV.h  SamsungTv.h  Tv.h
Murat-Src/: Device.cpp  DeviceFactory.cpp  LGFactory.cpp  LGTV.cpp  SamsungFactory.cpp  SamsungTv.cpp  Tv.cpp  test_main.cpp
include/: ConcreteModes.h  ConcreteStates.h  HomeStateMemento.h  Logger.h  MSH_mode.h  Mode.h  SystemController.h
include/Devices/: Camera.h  ChineseLight.h  ChineseLightAdapter.h  Device.h  DeviceFactory.h  DeviceIterator.h  DeviceManager.h  HomeState.h  LGFactory.h  LGTV.h  MSH.h  SamsungFactory.h  SamsungTv.h  SmokeDetector.h  TVConfig.h  Tv.h
include/Logic/: AbstractActionHandler.h  AlarmAction.h  CallFireStationAction.h  CallPoliceAction.h  ConcreteModes.h  ConcreteStates.h  DetectionSystem.h  FlashLightAction.h  HomeState.h  HomeStateMemento.h  IObserver.h  ISubject.h  Mode.h  (+3 more)
src/: ChineseLight.cpp  ChineseLightAdapter.cpp  ConcreteModes.cpp  ConcreteStates.cpp  Logger.cpp  MSH.cpp  MSH_mode.cpp  SystemController.cpp  main.cpp
ui/: README.txt
yunis-devices/: DeviceIterator.cpp  DeviceIterator.h  DeviceManager.cpp  DeviceManager.h
(+35 files in other folders)
